<resources>
    <string name="app_name">Maya A Home</string>
    <string name="text_item_label">Item Label</string>
    <string name="text_item_created">12/12/2020</string>
    <string name="title_about">About</string>
    <string name="title_qr_code">QR Code</string>
    <string name="text_signin">sign in</string>
    <string name="text_signup">sign up</string>
    <string name="text_create_account">create account now</string>
    <string name="app_punchline">Make us your partner</string>
    <string name="text_logout">Logout</string>
    <string name="text_update_profile">update profile</string>
    <string name="text_profile">Profile</string>
    <string name="text_pay">pay</string>
    <string name="text_unvailable">Not available yet!</string>
    <string name="text_total_payment">RM 20000</string>
    <string name="text_upload">upload</string>
    <string name="text_submit">submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_payment">Payment</string>
    <string name="title_enquire">Enquire</string>
    <string name="text_my_projects">My Projects</string>
    <string name="text_project_information">Project Information</string>
    <string name="button_create">create</string>
    <string name="text_customer_name">customer name</string>
    <string name="text_customer_email">customer email</string>
    <string name="text_edit">edit</string>
    <string name="text_project_detail">Project Detail</string>
    <string name="text_customer_detail">Customer Detail</string>
    <string name="text_assign">assign</string>
    <string name="text_view_feedback">View Feedback</string>
    <string name="text_change_user">Change User</string>
    <string name="text_edit_project_detail">Edit Project Detail</string>
    <string name="text_name">name</string>
    <string name="text_email">email</string>
    <string name="text_contact">contact</string>
    <string name="text_address">address</string>
    <string name="text_started">started</string>
    <string name="text_settlement">settlement</string>
    <string name="text_balance">balance</string>
    <string name="text_status">status</string>
    <string name="text_revenue">revenue</string>
    <string name="text_agent">Agent</string>
    <string name="text_new_project">new project</string>
    <string name="text_add_agent">Add Agent</string>
    <string name="text_change_customer">Change Customer</string>
    <string name="text_edit_project">edit project</string>
</resources>
